--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
 #root {
   margin: 0px;
-  padding: 20px;
+  padding: 0px;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
 }
+
+.containerApp {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
