--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,15 +1,32 @@
 .navbar {
+    width: 100%;
+    height: 100px;
     display: flex;
     justify-content: center;
+    align-content: center;
+    align-self: flex-end;
+    margin-top: auto;
+    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .menu {
+    height: 100%;
     display: flex;
     flex-direction: row;
-    column-gap: 20px;
+    column-gap: 50px;
+    align-content: center;
 }
 
 .menuItem {
+    height:100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+}
+
+.txtMenu {
+    text-decoration: none;
 }
