--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
-  margin: 0;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: center; /* This centers the flex items horizontally within the body */
+  align-items: center;
+  height: 100vh; /* This ensures the body takes up the full viewport height */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
