--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -6,6 +6,7 @@
     align-content: center;
     align-self: flex-end;
     margin-top: auto;
+    border: none;
     box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
 }
 
