--- a/src/components/Topbar.module.css
+++ b/src/components/Topbar.module.css
@@ -1,17 +1,17 @@
 .topbar {
-    max-width: 844px;
+    width: 100%;
+    margin-bottom: 30px;
 }
 
 .progressbar {
-    width: 100%; /* Adjust the width as needed */
-    height: 20px; /* Adjust the height as needed */
-    background-color: #f3f3f3; /* Background color of the progress bar container */
-    border-radius: 50px; /* Optional: Rounded corners */
-    overflow: hidden; /* Ensures the progress bar does not overflow the container */
+    width: 100%; 
+    height: 20px; 
+    background-color: #f3f3f3; 
+    border-radius: 50px; 
+    overflow: hidden; 
    }
    
    .progress {
     height: 100%;
-    background-color: #4caf50; /* Color of the progress bar */
-    width: 50%; /* Adjust the width to represent the progress */
+    background-color: #4caf50; 
    }
