--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .main-content {
-  width: 100%;
+  width: 100vw;
   max-width: 804px;
   padding: 20px;
   flex-grow: 1; /* This allows the main content to take up the remaining space */
