changes in css styles

--- a/src/scenes/SlotSelection.module.css
+++ b/src/scenes/SlotSelection.module.css
@@ -30,6 +30,7 @@
     width: 100px;
     border-color: transparent;
     border-radius: 5px;
+    color: black;
     background-color: lightgray;
 }
 
