changes in css styles

--- a/src/components/NavigationButtons.module.css
+++ b/src/components/NavigationButtons.module.css
@@ -21,4 +21,8 @@
     height: 40px;
     width: 100px;
     border-radius: 5px;
+    border-color: transparent;
+    color: white;
+    background-color: #4F4797;
+    font-weight: 800;
 }
