changes in tests added feedback when making reservation selections

--- a/src/components/NavigationButtons.module.css
+++ b/src/components/NavigationButtons.module.css
@@ -26,3 +26,13 @@
     background-color: #4F4797;
     font-weight: 800;
 }
+
+.btnDisabled {
+    height: 40px;
+    width: 100px;
+    border-radius: 5px;
+    border-color: transparent;
+    color: white;
+    background-color: #9894cb;
+    cursor: not-allowed; 
+}
