--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .app {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -18,8 +18,27 @@
 
 .main-content {
   width: 100vw;
-  max-width: 804px;
   padding: 20px;
   flex-grow: 1; /* This allows the main content to take up the remaining space */
   overflow-y: auto; /* Enables vertical scrolling */
-}
+ }
+ 
+ @media (max-width: 600px) {
+  .main-content {
+     max-width: 300px;
+  }
+ }
+ 
+  @media (min-width: 601px) and (max-width: 1024px) {
+  .main-content {
+     max-width: 400px; 
+  }
+ }
+ 
+ @media (min-width: 1025px) {
+  .main-content {
+     max-width: 600px; 
+  }
+ }
+ 
+ 
