--- a/src/components/NavigationButtons.module.css
+++ b/src/components/NavigationButtons.module.css
@@ -1,5 +1,6 @@
 .navigationButtons {
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: row;
 }
